changed tagline value from default in mw's i18n msg json to ocdla text, may be better way to do that

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -5,6 +5,7 @@
 		]
 	},
 	"skinname-example": "Example",
+	"ocdla-tagline" : "Example tagline here?",
 	"example-skin-desc": "An example skin showcasing the best practices",
 	"example-no-categories": "No categories"
 }
